[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/FadeScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/ambient_hum.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Levels/Level1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/World.gd" type="Script" id=6]

[node name="Main" type="Node2D"]

[node name="World" type="Node2D" parent="."]
script = ExtResource( 6 )
firstLevel = ExtResource( 5 )

[node name="Timer" type="Timer" parent="World"]
wait_time = 10.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="World"]

[node name="FadeScreen" parent="World/CanvasLayer" instance=ExtResource( 2 )]

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
visible = false
margin_right = 170.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
margin_right = 170.0
margin_bottom = 14.0
text = "LD51 Game"
align = 1

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 170.0
margin_bottom = 38.0
text = "Play"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 42.0
margin_right = 170.0
margin_bottom = 62.0
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="World/Timer" to="World" method="_on_Timer_timeout"]
[connection signal="FadedIn" from="World/CanvasLayer/FadeScreen" to="World" method="_on_FadeScreen_FadedIn"]
[connection signal="FadedOut" from="World/CanvasLayer/FadeScreen" to="World" method="_on_FadeScreen_FadedOut"]
